# vocabtool

./: README.md
vocabtool/: Cargo.toml  schema.sql
vocabtool/chin/: app.js  http.js  package.json
vocabtool/src/: main.rs
vocabtool/src/vocab/: mod.rs  model.rs  routes.rs  tokenize.rs
