[package]
name = "vocabtool"
version = "0.1.0"
authors = ["msg"]
edition = "2018"

[dependencies]
actix-web = "3"
listenfd = "0.3.3"
serde = "1.0.106"
serde_json = "1.0.51"
sqlx = { version = "0.3", features = [ "mysql" ] }
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
anyhow = "1.0.28"
futures = "0.3.13"
actix-cors = "0.5.4"
